# OpenKnotScorePipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/filter-badquality/: pipeline.py  run.py
examples/filter-badquality/source_rdats/: PKBHTP_2A3_0000.rdat
examples/pk50-twist/: pipeline.py  run.py
examples/pk50-twist-slurm/: pipeline.py
lib/: inference-shape.py
notebooks/: 1.RDATtoDataFrame.ipynb  1b.SplitDataForSherlockProcessing.ipynb  2.AddSilicoPredictions.ipynb  2b.CollateSubsets.ipynb  2c.LoadPredictionsFromCSV.ipynb  2d.CheckFailed.ipynb  3.CalculateOpenKnotScore.ipynb  4.DataFrametoRDAT.ipynb
openknotscore/: cli.py  config.py  db.py  scoring.py  utils.py
openknotscore/pipeline/: import_source.py
openknotscore/pipeline/prediction/: predict.py  prediction.py  predictors.py  sample.py
openknotscore/plan/: constraints.py  domain.py  solver.py
openknotscore/runners/: local.py  runner.py  slurm.py
openknotscore/scheduler/: domain.py
openknotscore/substation/: db.py  deferred.py  taskdb.py
openknotscore/substation/runners/: local.py  runner.py  slurm.py
openknotscore/substation/scheduler/: domain.py  scheduler.py
scripts/: GeneratePredictions.py  get_predictions.sbatch
src/openknotscore/: cli.py  config.py
src/openknotscore/lib/: inference-2d.py
src/openknotscore/pipeline/: import_source.py  scoring.py
src/openknotscore/pipeline/prediction/: predict.py  predictors.py  sample.py
src/openknotscore/substation/: README.md  deferred.py  taskdb.py
src/openknotscore/substation/runners/: local.py  runner.py  (+1 more)
(+3 files in other folders)
